[package]
name = "orbvue"
version = "0.1.0"
authors = ["Clouds Flowing <clouds.flowing@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
orbtk = { git = "https://github.com/redox-os/orbtk", branch = "develop" }
orbvue-derive = { path = "./derive", optional = true }
parse-generics-shim = "*"
paste = "*"

[dev-dependencies]
orbvue-derive = { path = "./derive" }

[features]
default = [ "derive" ]
derive = [ "orbvue-derive" ]
